[package]
name = "pns-ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-api = { workspace = true, features = ['std'] }
sp-blockchain.workspace = true
sp-block-builder = { workspace = true, features = ['std'] }
sp-core = { workspace = true, features = ['std'] }

axum.workspace = true
tracing.workspace = true

pns-types = { path = "../pns-types", features = ['std'] }
pns-runtime-api = { path = "../pns-runtime-api", features = ['std'] }
pns-registrar = { path = "../pns-registrar", features = ['std'] }

serde_json = "1"
trust-dns-server = { workspace = true, features = ["dns-over-rustls"] }
async-trait.workspace = true
tokio = { version = "1", default-features = false, features = ['net', 'rt', 'macros'] }
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
futures-util = "0.3"

[dev-dependencies]
tracing-subscriber = "0.2"
hex = "0.4.3"
