[package]
authors = ['Cupnfish']
description = 'Ens code is rewritten using substrate.'
edition = '2021'
homepage = 'https://app.pns.link/'
license = 'Unlicense'
name = "pns-registrar"
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = "0.1.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.serde]
default-features = false
workspace = true
features = ["derive"]

[dependencies.sp-core]
default-features = false
workspace = true

[dependencies.sp-io]
default-features = false
workspace = true

[dependencies.sp-std]
default-features = false
workspace = true


[dependencies.sp-runtime]
default-features = false
workspace = true

[dependencies.sp-api]
default-features = false
workspace = true


[dependencies.codec]
workspace = true
default-features = false
features = ["derive", "max-encoded-len"]
package = "parity-scale-codec"

[dependencies.frame-benchmarking]
default-features = false
workspace = true
optional = true


[dependencies.frame-support]
default-features = false
workspace = true

[dependencies.frame-system]
default-features = false
workspace = true


[dependencies.scale-info]
workspace = true
default-features = false
features = ["derive"]

[dependencies.pallet-balances]
workspace = true
default-features = false


[dev-dependencies]
sp-consensus-aura.workspace = true
pallet-aura.workspace = true
pallet-timestamp.workspace = true

[dev-dependencies.pns-resolvers]
path = "../pns-resolvers"

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking/runtime-benchmarks',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-api/std',
    'sp-core/std',
    'scale-info/std',
    'serde/std',
    'pallet-balances/std',
]
try-runtime = ['frame-support/try-runtime']
