[package]
authors = ['Cupnfish']
description = 'Ens code is rewritten using substrate.'
edition = '2021'
homepage = 'https://app.pns.link/'
license = 'Unlicense'
name = "pns-registrar"
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = "0.1.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
serde.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true
sp-api.workspace = true
frame-support.workspace = true
frame-system.workspace = true
scale-info.workspace = true
pallet-balances.workspace = true


[dependencies.codec]
workspace = true
package = "parity-scale-codec"

[dependencies.frame-benchmarking]
workspace = true
optional = true


[dependencies.pns-types]
default-features = false
path = "../pns-types"


[dev-dependencies]
sp-consensus-aura.workspace = true
pallet-aura.workspace = true
pallet-timestamp.workspace = true

[dev-dependencies.pns-resolvers]
path = "../pns-resolvers"

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking/runtime-benchmarks', 'frame-support/runtime-benchmarks', 'frame-system/runtime-benchmarks']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking?/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-api/std',
    'sp-core/std',
    'scale-info/std',
    'serde/std',
    'pallet-balances/std',
    'pns-types/std',
]
try-runtime = ['frame-support/try-runtime']
