[package]
authors = ['Cupnfish']
description = 'Ens code is rewritten using substrate.'
edition = '2021'
homepage = 'https://app.pns.link/'
license = 'Unlicense'
name = "pns-resolvers"
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = "0.1.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.17"


[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.17"

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.17"


[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.17"


[dependencies.codec]
package = "parity-scale-codec"
version = "2.3.0"
default-features = false
features = ["derive", "max-encoded-len"]

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
branch = "polkadot-v0.9.17"


[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.17"


[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.17"


[dependencies.scale-info]
version = "2.0"
default-features = false
features = ["derive"]


[dependencies.serde]
default-features = false
version = '1.0'
features = ["derive", "alloc"]

[dependencies.pns-registrar]
path = "../pns-registrar"
default-features = false
features = ["runtime-benchmarks"]
optional = true

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking/runtime-benchmarks',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
    'pns-registrar',
]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-core/std',
    'scale-info/std',
]
try-runtime = ['frame-support/try-runtime']
