[package]
authors = ['Cupnfish']
description = 'Ens code is rewritten using substrate.'
edition = '2021'
homepage = 'https://app.pns.link/'
license = 'Unlicense'
name = "pns-resolvers"
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = "0.1.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.sp-core]
default-features = false
workspace = true


[dependencies.sp-io]
default-features = false
workspace = true

[dependencies.sp-std]
default-features = false
workspace = true


[dependencies.sp-runtime]
default-features = false
workspace = true


[dependencies.codec]
workspace = true
default-features = false
package = "parity-scale-codec"
features = ["derive", "max-encoded-len"]

[dependencies.frame-benchmarking]
default-features = false
workspace = true
optional = true


[dependencies.frame-support]
default-features = false
workspace = true

[dependencies.frame-system]
default-features = false
workspace = true

[dependencies.scale-info]
workspace = true
default-features = false
features = ["derive"]


[dependencies.serde]
default-features = false
workspace = true
features = ["derive", "alloc"]

[dependencies.pns-registrar]
path = "../pns-registrar"
default-features = false
features = ["runtime-benchmarks"]
optional = true

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking/runtime-benchmarks',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
    'pns-registrar',
]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-core/std',
    'scale-info/std',
]
try-runtime = ['frame-support/try-runtime']
