[package]
authors = ['Cupnfish']
description = 'Ens code is rewritten using substrate.'
edition = '2021'
homepage = 'https://app.pns.link/'
license = 'Unlicense'
name = "pns-resolvers"
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = "0.1.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
sp-core.workspace = true
sp-io.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true
frame-support.workspace = true
frame-system.workspace = true
scale-info.workspace = true
serde.workspace = true

[dependencies.codec]
workspace = true
package = "parity-scale-codec"

[dependencies.frame-benchmarking]
workspace = true
optional = true

[dependencies.pns-registrar]
default-features = false
features = ['runtime-benchmarks']
optional = true
path = "../pns-registrar"

[dependencies.pns-types]
default-features = false
path = "../pns-types"


[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking/runtime-benchmarks', 'frame-support/runtime-benchmarks', 'frame-system/runtime-benchmarks', 'pns-registrar']
std = ['codec/std', 'frame-support/std', 'frame-system/std', 'frame-benchmarking?/std', 'sp-io/std', 'sp-runtime/std', 'sp-std/std', 'sp-core/std', 'scale-info/std', 'pns-types/std', 'serde/std']
try-runtime = ['frame-support/try-runtime']
