[package]
name = "pns-runtime-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
scale-info.workspace = true
serde.workspace = true
sp-api.workspace = true
sp-runtime.workspace = true

[dependencies.codec]
workspace = true
package = "parity-scale-codec"

[dependencies.pns-types]
path = "../pns-types"
default-features = false

[features]
default = ['std']
std = ['codec/std', 'scale-info/std', 'serde/std', 'sp-api/std', 'pns-types/std', 'sp-runtime/std']
