[package]
name = "pns-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.codec]
workspace = true
package = "parity-scale-codec"

[dependencies]
scale-info.workspace = true
serde = { optional = true, workspace = true }
frame-support.workspace = true
sp-api.workspace = true
sp-core.workspace = true


[features]
default = ['std']
std = ['scale-info/std', 'serde', 'frame-support/std', 'sp-api/std', 'sp-core/std']
